--- a/pom.xml
+++ b/pom.xml
@@ -64,6 +64,20 @@
             <artifactId>jaxb-api</artifactId>
             <version>2.2.12</version>
         </dependency>
+        
+	    <dependency>
+	        <groupId>org.slf4j</groupId>
+	        <artifactId>slf4j-api</artifactId>
+	        <version>1.7.25</version>
+	    </dependency>        
+		<dependency>
+		    <groupId>org.slf4j</groupId>
+		    <artifactId>slf4j-jdk14</artifactId>
+		    <version>1.7.25</version>
+		</dependency>        
+
+
+        
     </dependencies>
     <build>
         <finalName>md2</finalName>
